[gd_scene load_steps=8 format=3 uid="uid://sqi3ggdf8gcs"]

[ext_resource type="Script" path="res://FlightModelV1.gd" id="1_22vd2"]
[ext_resource type="Texture2D" uid="uid://bsa8ksveitkyk" path="res://addons/kenney_prototype_textures/orange/texture_02.png" id="2_85qfr"]
[ext_resource type="Script" path="res://Airfoil.gd" id="3_8qea4"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ghqgg"]
friction = 0.0

[sub_resource type="SphereShape3D" id="SphereShape3D_gctro"]

[sub_resource type="SphereMesh" id="SphereMesh_4hllk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_adshf"]
albedo_texture = ExtResource("2_85qfr")
uv1_scale = Vector3(1.16, 1.16, 1.16)

[node name="Airplane" type="RigidBody3D"]
mass = 3500.0
physics_material_override = SubResource("PhysicsMaterial_ghqgg")
linear_damp = 0.01
angular_damp = 1.0
script = ExtResource("1_22vd2")
roll_sensitivity = 0.05
max_thrust = 200000.0
body_drag = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_gctro")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 5.53401e-08, -1.40489e-07, 0, 0.930418, 0.366501, 1.50996e-07, 0.366501, -0.930418, 0, 2.26973, -4.26653)
fov = 90.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="AoA" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Lift" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Speed" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Alt" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Controls" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="left_wing" type="Node" parent="."]
script = ExtResource("3_8qea4")
AoA_max = 19.0
lift_coefficient_max = 1.36
lift_coefficient_zero_AOA = 0.163
wing_area = 10.0
drag_zero_AoA = 0.005
drag_multiplier = 0.07

[node name="right_wing" type="Node" parent="."]
script = ExtResource("3_8qea4")
AoA_max = 19.0
lift_coefficient_max = 1.36
lift_coefficient_zero_AOA = 0.163
wing_area = 10.0
drag_zero_AoA = 0.005
drag_multiplier = 0.07

[node name="elevator_wing" type="Node" parent="."]
script = ExtResource("3_8qea4")
AoA_max = 19.0
lift_coefficient_max = 0.18
wing_area = 0.5
local_offset = Vector3(0, 0, -7)
drag_zero_AoA = 0.005
drag_multiplier = 0.01
lift_multiplier = 0.01

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_4hllk")
surface_material_override/0 = SubResource("StandardMaterial3D_adshf")
